app/assets/stylesheets/partials/user-cover-image.css.scss
.user-cover {
  height: 400px;
  overflow: hidden;
  position: relative;

  .cover-photo {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 400px;
    width: 100%;
    position: relative;
    .edit-cover {
      position: absolute;
      top: 0;
      right: 0;
      left: 0;
      text-align: center;
      height: 150px;
      color: #fff;
      background: rgba(0,0,0,.7);
      transition: .2s ease-in;
      display: none;
      padding-top: 70px;
      &:hover {
        background: rgba(0,0,0,.8);
      }
      label {
        width: 100%;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        height: 150px;
        padding-top: 30px;
        &:hover {
          cursor: pointer;
        }
      }
    }
  }

  &.edit-menu {
    .edit-cover {
      display: block;
    }
  }

  .dark-overlay {
    position: absolute;
    bottom: 0;
    top: 0;
    width: 100%;
    background: #000;
    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
    z-index: 2;
  }
}



/* User Cover Options */
.user-cover-options {
  color: #fff;
  position: absolute;
  width: 100%;
  top: -195px;
  z-index: 4;

  .edit-avatar {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(0,0,0,.7);
    border-radius: 3px;
    text-align: center;
    transition: .2s ease-in;
    display: none;
    &:hover {
      background: rgba(0,0,0,.8);
    }
    label {
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      padding-top: 12px;
      cursor: pointer;
      margin-top: 25px;
      .fa {
        display: block;
      }
    }
  }

  &.edit-menu {
    .edit-cover, .edit-avatar {
      display: block;
    }
  }

  .user-wrapper {
    padding-left: 0;

    .account-info {
      padding: 5px;
      float: left;
      height: 110px;
      position: relative;
      top: 25px;
      width: 500px;
      textarea {
        border: none;
        color: #333;
        width: 470px;
        background: rgba(255,255,255,.8);
        padding: 0 10px;
      }
      @media (max-width: 1200px) { padding-left: 30px; }
      @media (max-width: 990px) { padding-left: 15px; }
      @media (max-width: 850px) and (min-width: 694px) {
        position: relative;
        top: 0;
        width: 100%;
        overflow: auto;
        .username {
          margin-top: 10px;
        }
      }
      @media (max-width: 768px) { padding-left: 15px; }
      @media (max-width: 694px) {
        width: 100%;
      }
    }
  }

  .bio-wrapper {
    position: absolute;
    bottom: 0;
    p {
      margin-bottom: 0;
    }
  }

  .follow-widgets {
    float: right;
    display: inline-block;
    @media (max-width: 694px) {
      width: 100%;
      top: 0;
      float: left;
      padding-left: 15px;
    }
    li {
      text-align: center;
      margin-right: 20px;
      &:last-child {
        margin-right: 0;
      }
    }
    .follow-title {
      text-transform: uppercase;
      font-family: $headerFontFamily;
      font-weight: normal;
      opacity: .7;
      color: #fff;
    }
    .follow-count {
      margin-top: 5px;
      color: #fff;
    }
  }


  .large-avatar {
    position: relative;
    float: left;
    @media (max-width: 990px) {
      float: none;
    }

    img {
      border-radius: 3px;
      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
      max-width: 120px;
    }
  }

  .user-avatar {
    top: 25px;
    width: 12%;
    @media (max-width: 990px) {
      position: absolute;
      width: 100%;
      top: -70px;
      text-align: center;
    }
    @media (max-width: 768px) {
      top: -115px;
      left: 0px;
      bottom: auto;
    }
  }

  .account-wrapper {
    width: 88%;
    @media (max-width: 990px) {
      width: 100%;
    }
    @media (max-width: 694px) {
      height: 110px;
      overflow: auto;
      position: relative;
      top: 30px;
      .username {
        margin-top: 10px;
      }
    }
  }

  .user-bio {
    max-width: 500px;
    word-break: break-word;
    @media (max-width: 850px) {
      max-width: 350px;
    }
    @media (max-width: 694px) {
      width: 100%;
    }
  }



  .user-cover-options .account-info {
    padding-left: 25px;
  }

  .username {
    margin-top: 17px;
  }

  .fa-exchange, .fa-heart-o, .fa-envelope-o {
    @media (max-width: 400px) {
      display: none;
    }
  }

  .follow-button {
    font-size: 16px;
    padding: 7px 50px;
    background: #1abc9c;
    position: absolute;
    right: 0;
    bottom: -65px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    .fa {
      margin-right: 5px;
      font-size: 12px;
    }
    &:hover {
      background: darken(#1abc9c, 10);
    }
    &.unfollow {
      background: #E2E2E2;
      color: #737373;
      &:hover {
        background: darken(#E2E2E2, 10);
      }
    }
    &.save {
      background: #f89774;
      color: #fff;
      &:hover {
        background: darken(#f89774, 10);
      }
    }
    &.edit {
      background: #fff;
      background: rgba(255,255,255,.2);
      color: #fff;
      &:hover {
        background: rgba(255,255,255,.3);
      }
    }
  }
}


/* User Cover for Review Page */
.series-content {
  .review-cover {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    .user-cover {
      height: 150px;
    }
    .cover-overlay {
      bottom: -45px;
    }
  }

  .container.relative {
    height: 150px;
  }

  .profile-navigation {
    position: absolute;
    left: 0;
    right: 0;
  }

  .user-cover-options {
    top: 35px;
    .username {
      margin-top: 55px;
      margin-left: 15px;
    }
  }

  .user-wrapper {
    width: 100%;
    .account-info {
      float: left;
      @media (max-width: 990px) {
        padding-left: 110px;
      }
    }
  }

  .follow-button {
    font-size: 16px;
    background: #eee;
    color: #333;
    top: 64px;
    right: 0;
    padding-left: 40px;
    padding-right: 40px;
  }
}

